--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,3 +2,9 @@
 <h1>
     Codeial / <%= title %>
 </h1>
+
+<p>Name: <%= user.name %> </p>
+<p>Email: <%= user.email %> </p>
+
+<!-- Example HTML for a sign-out link -->
+<a href="/users/sign-out">Sign Out</a>
