Style the HTML using SCSS

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,18 +1,27 @@
 <html>
-    <head>
-        <title>
-            <%= title %>
-        </title>
-        <link rel="stylesheet" href="/css/layout.css">
-        <%- style %>
-    </head>
 
-    <body>
-        <%- include('_header'); %>
+<head>
+    <title>
+        <%= title %>
+    </title>
+
+    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/user_profile.css">
+    <link rel="stylesheet" href="/css/auth.css">
+
+
+    <%- style %>
+</head>
+
+<body>
+    <%- include('_header'); %>
 
         <%- body %>
 
-        <%- include('_footer'); %>
-        <%- script %>
-    </body>
+            <%- include('_footer'); %>
+                <%- script %>
+</body>
+
 </html>
